fix display on narrow screens

--- a/static/style.css
+++ b/static/style.css
@@ -9,11 +9,9 @@ body {
 }
 
 body > section, body > header, body > footer {
-    max-width: 45rem;
+    max-width: 40rem;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 3rem;
-    padding-right: 3rem;
 }
 
 header > h1 {
